WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249421
[CSS] Fix computed value for `transform` property
https://bugs.webkit.org/show_bug.cgi?id=249421
Summary
[CSS] Fix computed value for `transform` property
Chris Dumez
Reported
2022-12-15 11:56:28 PST
Fix computed value for `transform` property. SkewY was incorrectly reported as SkewX due to a bad copy/paste.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-12-15 11:57:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7713
Chris Dumez
Comment 2
2022-12-15 11:59:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7714
EWS
Comment 3
2022-12-15 17:03:15 PST
Committed
257964@main
(199b72026c4d): <
https://commits.webkit.org/257964@main
> Reviewed commits have been landed. Closing PR #7714 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2022-12-15 17:04:16 PST
<
rdar://problem/103425506
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug