[CSS] Fix computed value for `transform` property https://bugs.webkit.org/show_bug.cgi?id=249421

Reviewed by NOBODY (OOPS!).

Fix computed value for `transform` property. SkewY was incorrectly reported as
SkewX due to a bad copy/paste.

* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/the-stylepropertymap/properties/transform-expected.txt:
* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::computedTransform):